gitops/apps/base/adguard/dns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: dns
spec:
  selector:
    app: adguard
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
