gitops/apps/base/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-http
  namespace: dns
spec:
  selector:
    app: adguard
  ports:
    - name: http
      port: 3000
      targetPort: http
