gitops/apps/base/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  namespace: dns
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: adguard-http
      port:
        number: 3000
