gitops/apps/base/adguard/np-tailscale-to-adguard.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-allow-tailscale-to-adguard
  namespace: dns
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: adguard
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
      ports:
        - protocol: TCP
          port: 3000
        - protocol: UDP 
          port: 53 
        - protocol: TCP 
          port: 53
